system-apps/argocd/argo-template/resources/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
