system-apps/argocd/argo-template/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - private
  routes:
  - match: PathPrefix(`/argocd`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
